--- a/IorE/introverts_or_extroverts.ipynb
+++ b/IorE/introverts_or_extroverts.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:28.396658Z",
-     "start_time": "2025-07-24T18:43:28.381021Z"
+     "end_time": "2025-07-31T10:46:53.387479Z",
+     "start_time": "2025-07-31T10:46:53.356216Z"
     }
    },
    "source": [
@@ -31,7 +31,7 @@
     "from ydata_profiling.model.dataframe import preprocess"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -48,8 +48,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:28.454828Z",
-     "start_time": "2025-07-24T18:43:28.403525Z"
+     "end_time": "2025-07-31T10:46:53.433517Z",
+     "start_time": "2025-07-31T10:46:53.387479Z"
     }
    },
    "cell_type": "code",
@@ -59,7 +59,7 @@
    ],
    "id": "b95ba859455f574d",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -70,8 +70,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:28.605923Z",
-     "start_time": "2025-07-24T18:43:28.582072Z"
+     "end_time": "2025-07-31T10:46:53.576729Z",
+     "start_time": "2025-07-31T10:46:53.544941Z"
     }
    },
    "cell_type": "code",
@@ -101,13 +101,13 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:28.953741Z",
-     "start_time": "2025-07-24T18:43:28.922370Z"
+     "end_time": "2025-07-31T10:46:53.771285Z",
+     "start_time": "2025-07-31T10:46:53.741008Z"
     }
    },
    "cell_type": "code",
@@ -227,18 +227,18 @@
        "</div>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.098880Z",
-     "start_time": "2025-07-24T18:43:29.037469Z"
+     "end_time": "2025-07-31T10:46:54.127004Z",
+     "start_time": "2025-07-31T10:46:54.067361Z"
     }
    },
    "cell_type": "code",
@@ -373,12 +373,12 @@
        "</div>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -389,8 +389,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.234973Z",
-     "start_time": "2025-07-24T18:43:29.216978Z"
+     "end_time": "2025-07-31T10:46:54.293782Z",
+     "start_time": "2025-07-31T10:46:54.277485Z"
     }
    },
    "cell_type": "code",
@@ -400,7 +400,7 @@
    ],
    "id": "fe59f6c532363aa4",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -411,21 +411,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.374003Z",
-     "start_time": "2025-07-24T18:43:29.322554Z"
+     "end_time": "2025-07-31T10:46:54.456467Z",
+     "start_time": "2025-07-31T10:46:54.381159Z"
     }
    },
    "cell_type": "code",
    "source": [
     "df.drop(['Stage_fear'], axis=1, inplace=True)\n",
     "df_test.drop(['Stage_fear'], axis=1, inplace=True)\n",
-    "X = df.iloc[:, 1:-1]\n",
     "y = df['Personality']\n",
+    "df.drop(['Personality'], axis=1, inplace=True)\n",
+    "df['AloneC'] = df['Time_spent_Alone'] / df['Social_event_attendance']\n",
+    "df_test['AloneC'] = df_test['Time_spent_Alone'] / df_test['Social_event_attendance']\n",
+    "\n",
+    "X = df.iloc[:, 1:]\n",
     "X_train_random, X_test_random, y_train_random, y_test_random = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "X_train = X\n",
     "X_test = df_test.iloc[:, 1:]\n",
     "y_train = y\n",
-    "X_test.head()\n",
+    "df.head()\n",
     "\n"
    ],
    "id": "9c97b06063545c4e",
@@ -433,19 +437,19 @@
     {
      "data": {
       "text/plain": [
-       "   Time_spent_Alone  Social_event_attendance  Going_outside  \\\n",
-       "0               3.0                      7.0            4.0   \n",
-       "1               NaN                      0.0            0.0   \n",
-       "2               3.0                      5.0            6.0   \n",
-       "3               3.0                      4.0            4.0   \n",
-       "4               9.0                      1.0            2.0   \n",
+       "   id  Time_spent_Alone  Social_event_attendance  Going_outside  \\\n",
+       "0   0               0.0                      6.0            4.0   \n",
+       "1   1               1.0                      7.0            3.0   \n",
+       "2   2               6.0                      1.0            0.0   \n",
+       "3   3               3.0                      7.0            3.0   \n",
+       "4   4               1.0                      4.0            4.0   \n",
        "\n",
-       "  Drained_after_socializing  Friends_circle_size  Post_frequency  \n",
-       "0                        No                  6.0             NaN  \n",
-       "1                       Yes                  5.0             1.0  \n",
-       "2                        No                 15.0             9.0  \n",
-       "3                        No                  5.0             6.0  \n",
-       "4                       Yes                  1.0             1.0  "
+       "  Drained_after_socializing  Friends_circle_size  Post_frequency    AloneC  \n",
+       "0                        No                 15.0             5.0  0.000000  \n",
+       "1                        No                 10.0             8.0  0.142857  \n",
+       "2                       NaN                  3.0             0.0  6.000000  \n",
+       "3                        No                 11.0             5.0  0.428571  \n",
+       "4                        No                 13.0             NaN  0.250000  "
       ],
       "text/html": [
        "<div>\n",
@@ -466,71 +470,83 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>Time_spent_Alone</th>\n",
        "      <th>Social_event_attendance</th>\n",
        "      <th>Going_outside</th>\n",
        "      <th>Drained_after_socializing</th>\n",
        "      <th>Friends_circle_size</th>\n",
        "      <th>Post_frequency</th>\n",
+       "      <th>AloneC</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>No</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>No</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>0.428571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.250000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 36
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -547,8 +563,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.489091Z",
-     "start_time": "2025-07-24T18:43:29.480004Z"
+     "end_time": "2025-07-31T10:46:54.633183Z",
+     "start_time": "2025-07-31T10:46:54.611815Z"
     }
    },
    "cell_type": "code",
@@ -559,7 +575,7 @@
    ],
    "id": "5ca2a01ec2c6a50b",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -570,8 +586,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.606886Z",
-     "start_time": "2025-07-24T18:43:29.590881Z"
+     "end_time": "2025-07-31T10:46:54.756328Z",
+     "start_time": "2025-07-31T10:46:54.737806Z"
     }
    },
    "cell_type": "code",
@@ -581,7 +597,7 @@
    ],
    "id": "6a6ad68267ab3302",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -592,15 +608,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.697036Z",
-     "start_time": "2025-07-24T18:43:29.681397Z"
+     "end_time": "2025-07-31T10:46:54.825246Z",
+     "start_time": "2025-07-31T10:46:54.810112Z"
     }
    },
    "cell_type": "code",
    "source": "preprocessor = ColumnTransformer([('cat', cat_pipeline, cat_features), ('num', num_pipeline, num_features)])",
    "id": "a4ffb1f9d8635491",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -617,15 +633,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:29.885379Z",
-     "start_time": "2025-07-24T18:43:29.850150Z"
+     "end_time": "2025-07-31T10:46:55.136793Z",
+     "start_time": "2025-07-31T10:46:55.100247Z"
     }
    },
    "cell_type": "code",
    "source": "pipeline = Pipeline([('preprocessor', preprocessor), ('classifier', svm.SVC(kernel='linear', class_weight='balanced'))])\n",
    "id": "fa93b89d1ed87c9",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -636,14 +652,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:43:58.035720Z",
-     "start_time": "2025-07-24T18:43:30.023338Z"
+     "end_time": "2025-07-31T10:47:06.797421Z",
+     "start_time": "2025-07-31T10:46:55.152701Z"
     }
    },
    "cell_type": "code",
    "source": [
     "param_grid = {\n",
-    "    'classifier__C': [0.01, 0.1, 1, 10],\n",
+    "    'classifier__C': [0.01],\n",
     "}\n",
     "grid = GridSearchCV(pipeline, param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
     "grid.fit(X_train, y_train)\n"
@@ -674,7 +690,7 @@
        "                                       ('classifier',\n",
        "                                        SVC(class_weight='balanced',\n",
        "                                            kernel='linear'))]),\n",
-       "             n_jobs=-1, param_grid={'classifier__C': [0.01, 0.1, 1, 10]},\n",
+       "             n_jobs=-1, param_grid={'classifier__C': [0.01]},\n",
        "             scoring='accuracy')"
       ],
       "text/html": [
@@ -1176,7 +1192,7 @@
        "                                       (&#x27;classifier&#x27;,\n",
        "                                        SVC(class_weight=&#x27;balanced&#x27;,\n",
        "                                            kernel=&#x27;linear&#x27;))]),\n",
-       "             n_jobs=-1, param_grid={&#x27;classifier__C&#x27;: [0.01, 0.1, 1, 10]},\n",
+       "             n_jobs=-1, param_grid={&#x27;classifier__C&#x27;: [0.01]},\n",
        "             scoring=&#x27;accuracy&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" ><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>GridSearchCV</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.7/modules/generated/sklearn.model_selection.GridSearchCV.html\">?<span>Documentation for GridSearchCV</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
        "        <div class=\"estimator-table\">\n",
        "            <details>\n",
@@ -1200,7 +1216,7 @@
        "                          this.parentElement.nextElementSibling)\"\n",
        "            ></i></td>\n",
        "            <td class=\"param\">param_grid&nbsp;</td>\n",
-       "            <td class=\"value\">{&#x27;classifier__C&#x27;: [0.01, 0.1, ...]}</td>\n",
+       "            <td class=\"value\">{&#x27;classifier__C&#x27;: [0.01]}</td>\n",
        "        </tr>\n",
        "    \n",
        "\n",
@@ -1852,12 +1868,12 @@
        "</script></body>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -1868,8 +1884,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:44:04.015775Z",
-     "start_time": "2025-07-24T18:43:58.283834Z"
+     "end_time": "2025-07-31T10:47:13.047271Z",
+     "start_time": "2025-07-31T10:47:06.943576Z"
     }
    },
    "cell_type": "code",
@@ -1895,7 +1911,7 @@
      ]
     }
    ],
-   "execution_count": 42
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -1906,8 +1922,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-24T18:44:04.297248Z",
-     "start_time": "2025-07-24T18:44:04.047218Z"
+     "end_time": "2025-07-31T10:47:13.451473Z",
+     "start_time": "2025-07-31T10:47:13.159662Z"
     }
    },
    "cell_type": "code",
@@ -1919,7 +1935,7 @@
    ],
    "id": "fb9144551a4907eb",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 39
   }
  ],
  "metadata": {
